deploy/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-rest-api
spec:
  replicas: 1 # Solo 1 réplica para desarrollo
  template:
    spec:
      containers:
        - name: poc-rest-api
          image: ghcr.io/neniel/poc-rest-api:0.0.1
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
