deploy/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-rest-api
spec:
  rules:
  - host: poc-rest-api.neniel.com
